--- a/app/views/mythreads/show.html.erb
+++ b/app/views/mythreads/show.html.erb
@@ -3,6 +3,13 @@
 <p>
   <strong>Author:</strong>
   <%= @mythread.user.name %>
+  <% if current_user.id != @mythread.user.id %>
+    <% if @follow %>
+    <input type="button" class="JS_toggle" value="unfollow" data-id="<%= @mythread.user.id %>" />
+    <% else %>
+    <input type="button" class="JS_toggle" value="follow" data-id="<%= @mythread.user.id %>" />
+    <% end %>
+  <% end %>
 </p>
 
 <p>
@@ -49,3 +56,16 @@
 
 <%= link_to 'Edit', edit_mythread_path(@mythread) %> |
 <%= link_to 'Back', mythreads_path %>
+
+<script type="text/javascript">
+$(function(){
+  $('.JS_toggle').click(function(evt){
+    var _self = $(this);
+    var id = _self.data('id');
+    $.post('/follows/toggle/' + id);
+
+    var label = ( _self.attr('value') === 'follow' ) ? 'unfollow' : 'follow';
+    _self.attr('value', label);
+  });
+})
+</script>
