--- a/app/views/mythreads/show.html.slim
+++ b/app/views/mythreads/show.html.slim
@@ -7,9 +7,9 @@ p
   = @mythread.user.name
   - if current_user.id != @mythread.user.id
     - if @follow.present?
-      input type="button" class="JS_toggle" value="unfollow" data-id=@mythread.user.id
+      input type="button" class="js-toggle" value="unfollow" data-id=@mythread.user.id
     - else
-      input type="button" class="JS_toggle" value="follow" data-id=@mythread.user.id
+      input type="button" class="js-toggle" value="follow" data-id=@mythread.user.id
 p
   strong
     'Title:
